--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,85 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <title>
+      Quadrigis – Software Development Company | Tworzenie oprogramowania .NET,
+      C#, SQL, React
+    </title>
+
+    <meta
+      name="description"
+      content="Quadrigis – tworzymy oprogramowanie w .NET, C#, SQL i React. Profesjonalne aplikacje webowe, integracje systemów i rozwiązania chmurowe."
+    />
+    <meta
+      name="keywords"
+      content="Quadrigis, .NET, C#, React, SQL, software development, tworzenie oprogramowania, aplikacje webowe, integracje systemów, custom software"
+    />
+    <meta name="author" content="Quadrigis" />
+
+    <!-- English alternate version -->
+    <link rel="canonical" href="https://quadrigis.com/" />
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta
+      property="og:title"
+      content="Quadrigis – Software Development in .NET, C#, SQL, React"
+    />
+    <meta
+      property="og:description"
+      content="Custom software development in .NET, C#, SQL and React. Quadrigis builds secure, scalable web applications and business systems."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://quadrigis.com/" />
+    <meta property="og:image" content="https://quadrigis.com/logo.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Quadrigis – Software Development in .NET, C#, SQL, React"
+    />
+    <meta
+      name="twitter:description"
+      content="Professional software development services – .NET, React, SQL, cloud solutions."
+    />
+    <meta name="twitter:image" content="https://quadrigis.com/logo.png" />
+
+    <!-- Structured Data (JSON-LD for Google) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Quadrigis",
+        "url": "https://quadrigis.com",
+        "logo": "https://quadrigis.com/logo.png",
+        "description": "Quadrigis is a software development company specializing in .NET, C#, SQL, and React solutions for businesses.",
+        "sameAs": [
+          "https://github.com/quadrigis"
+        ],
+        "founder": {
+          "@type": "Person",
+          "name": "Michał Jędruch"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "PL"
+        }
+      }
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
